# argot

./: .dependency-cruiser.cjs  .gitignore  .mise.toml  .oxlintrc.json  CLAUDE.md  CONTEXT-MAP.md  LICENSE  README.md  install.sh  justfile  knip.config.ts  lefthook.yml  package.json  pyproject.toml  tsconfig.base.json
benchmarks/: README.md  pyproject.toml  targets.yaml
benchmarks/catalogs/dagster/: manifest.yaml
benchmarks/catalogs/faker/: manifest.yaml
benchmarks/catalogs/faker-js/: manifest.yaml
benchmarks/catalogs/faker-js/breaks/: break_error_flip_1.ts  break_error_flip_2.ts  break_error_flip_3.ts  break_foreign_rng_1.ts  break_foreign_rng_2.ts  break_foreign_rng_3.ts  break_http_sink_1.ts  break_http_sink_2.ts  break_http_sink_3.ts  break_http_sink_4.ts  break_runtime_fetch_1.ts  break_runtime_fetch_2.ts  break_runtime_fetch_3.ts  break_runtime_fetch_4.ts  break_threading_1.ts  break_threading_2.ts  break_threading_3.ts
benchmarks/catalogs/faker/breaks/: break_mimesis_alt_2.py  break_mimesis_alt_3.py  break_numpy_random_2.py  break_numpy_random_3.py  break_requests_source_1.py  break_requests_source_2.py  break_requests_source_3.py  break_sqlalchemy_sink_1.py  break_sqlalchemy_sink_2.py  break_sqlalchemy_sink_3.py  break_synthetic_formula_1.py  break_threading_provider_2.py  break_threading_provider_3.py
benchmarks/catalogs/fastapi/: manifest.yaml
benchmarks/catalogs/fastapi/breaks/: paradigm_break_assert_validation.py  paradigm_break_cerberus_validation.py  paradigm_break_concurrent_futures_background.py  paradigm_break_django_cbv.py  paradigm_break_flask_errorhandler.py  paradigm_break_flask_routing.py  paradigm_break_imperative_route_loop.py  paradigm_break_injector_di.py  paradigm_break_json_error_response.py  paradigm_break_manual_dict_response.py  paradigm_break_manual_validation.py  paradigm_break_msgpack_response.py  paradigm_break_queue_carryover.py  paradigm_break_subtle_manual_status_check.py  paradigm_break_subtle_wrong_exception.py  paradigm_break_sync_file_io_async.py  paradigm_break_sync_requests_in_async.py  paradigm_break_traceback_in_response.py  paradigm_break_voluptuous_validation.py
benchmarks/catalogs/hono/: manifest.yaml
benchmarks/catalogs/hono/breaks/: break_async_blocking_1.ts  break_async_blocking_2.ts  break_middleware_1.ts  (+14 more)
benchmarks/catalogs/ink/: manifest.yaml
benchmarks/catalogs/rich/: manifest.yaml
benchmarks/scripts/: diag_slipthroughs.py  verify_parity.py
benchmarks/src/argot_bench/: __main__.py  call_receiver.py  cli.py  clone.py  extract.py  fixtures.py  metrics.py  report.py  run.py  score.py  targets.py  typicality.py
benchmarks/tests/: test_bench_alpha_defaults.py  test_call_receiver.py  test_cli.py  test_cli_quick.py  test_clone.py  test_extract.py  test_fixtures.py  test_metrics.py  test_report.py  test_run.py  test_scaffold.py  test_score.py  test_targets.py  test_typicality.py  test_typicality_memory.py
engine/: CONTEXT.md  README.md  pyproject.toml
engine/argot/: __main__.py  benchmark.py  check.py  corpus.py  dataset.py  explain.py  extract.py  fetch.py  git_walk.py  mutations.py  stats.py  tokenize.py  train.py  validate.py
engine/argot/acceptance/: runner.py
engine/argot/benchmark_fixtures/: control_normal_effect.ts  control_normal_python.py  control_trivial_predicate.ts  manifest.json  paradigm_break_class.ts  paradigm_break_composition.ts  paradigm_break_console_log.ts  paradigm_break_di.ts  paradigm_break_logging.py  paradigm_break_pathlib.py  paradigm_break_print.py  paradigm_break_promise.ts  paradigm_break_relative_import.ts  paradigm_break_throw_error.ts  paradigm_break_typed_exception.py  paradigm_break_validation.ts
engine/argot/jepa/: bpe_vocab.py  density_heads.py  encoder.py  model.py  predictor.py  pretrained_encoder.py  seq_encoder.py  sigreg.py  vocab.py
engine/argot/ml/: __init__.py  cli.py  embeddings.py  features.py  train.py
engine/argot/research/: _phase10_corpus_analysis.py  ast_structural_audit_test.py  holdout_category_delta_test.py  holdout_partition_test.py  llm_rerank_experiment.py  static_chunk_audit_test.py
engine/argot/scripts/: spot_check.py
engine/argot/tests/: test_acceptance_runner.py  test_adapters_python.py  test_adapters_typescript.py  test_benchmark.py  test_boundaries.py  test_bpe_vocab.py  test_calibration.py  test_call_receiver.py  test_call_receiver_clustering.py  test_call_scope_fraction.py  test_check.py  test_check_smoke.py  test_corpus_benchmark.py  test_corpus_concat.py  test_corpus_downsample.py  test_defaults_consistent.py  test_density_heads.py  test_encoder_switch.py  test_evidence_bpe_reconstruction.py  test_evidence_collectors.py  test_evidence_corpus.py  test_evidence_formatters.py  test_evidence_integration.py  test_evidence_layout.py  test_except_return_raise_ratio.py  test_explain.py  test_explain_smoke.py  test_extract.py  test_extract_smoke.py  test_fall_through_guards.py  test_fetch.py  test_git_walk.py  test_hf_direct_encoder.py  test_jepa.py  test_ml_embeddings.py  test_ml_features.py  test_mutations.py  test_namespace_jsd.py  test_parity_fix10.py  test_pretrained_encoder.py  (+12 more)
engine/argot_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
engine/scripts/: era12_phase10_cluster_frequency_probe.py  era12_phase62_probe.py  era12_phase63_loo.py  era12_phase64_centroid.py  era12_phase64b_centroid_fallback.py  era12_phase71_whitened_euclidean.py  era12_phase7_mahalanobis.py  era12_phase8_mlm_surprise.py  era12_phase8c_context_centroid.py  era12_phase8d_hunk_context_divergence.py  era12_phase8e_token_nn_in_context.py  era12_phase8f_ensemble_maxz.py  era12_phase9_import_source_rules.py  era14_phase10_cluster_frequency_probe.py  era14_phase62_probe.py  era14_phase63_loo.py  era14_phase64_centroid.py  era14_phase64b_centroid_fallback.py  era14_phase71_whitened_euclidean.py  era14_phase7_mahalanobis.py  era14_phase8_mlm_surprise.py  era14_phase8c_context_centroid.py  era14_phase8d_hunk_context_divergence.py  era14_phase8e_token_nn_in_context.py  era14_phase8f_ensemble_maxz.py  era14_phase9_import_source_rules.py
(+715 files in other folders)
