[project]
name = "argot-bench"
version = "0.1.0"
description = "Benchmark harness for argot's production scorer"
requires-python = ">=3.13"
dependencies = [
  "argot-engine",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scipy>=1.12",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-typescript>=0.23",
]

[project.scripts]
argot-bench = "argot_bench.cli:main"

[tool.uv.sources]
argot-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argot_bench"]

[tool.mypy]
python_version = "3.13"
strict = false
check_untyped_defs = true
warn_unused_ignores = true
mypy_path = "../engine"

[[tool.mypy.overrides]]
module = ["yaml", "sklearn.*", "scipy.*", "tree_sitter", "tree_sitter_python", "tree_sitter_typescript"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["catalogs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that spawn real subprocesses or hit the network"]
