[project]
name = "argot-engine"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pygit2==1.19.2",
    "scikit-learn>=1.5.0",
    "torch>=2.0.0",
    "einops>=0.6.0",
    "tree-sitter==0.23.2",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-python==0.23.6",
]

[project.scripts]
argot-extract = "argot.extract:main"
argot-train = "argot.train:main"
argot-check = "argot.check:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff==0.7.0",
    "mypy==1.11.2",
    "pytest==8.3.3",
]

[tool.mypy]
strict = true
python_version = "3.13"

[[tool.mypy.overrides]]
module = "pygit2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "einops"
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["argot/tests"]
