[project]
name = "argot-engine"
version = "0.2.9"
requires-python = ">=3.11"
dependencies = [
    "pygit2==1.19.2",
    "scikit-learn>=1.5.0",
    "torch>=2.0.0",
    "einops>=0.6.0",
    "tree-sitter==0.23.2",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-python==0.23.6",
    "tokenizers>=0.20.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "peft>=0.10",
]

[project.scripts]
argot-extract = "argot.extract:main"
argot-train = "argot.train:main"
argot-check = "argot.check:main"
argot-fetch = "argot.fetch:main"
argot-validate = "argot.validate:main"
argot-explain = "argot.explain:main"
argot-benchmark = "argot.benchmark:main"
argot-corpus = "argot.corpus:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff==0.7.0",
    "mypy==1.11.2",
    "pytest==8.3.3",
]

[tool.mypy]
strict = true
python_version = "3.13"
exclude = [".*/tier3_fixtures/.*"]

[[tool.mypy.overrides]]
module = "pygit2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "einops"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tokenizers"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tokenizers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "peft"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "peft.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tree_sitter_python"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tree_sitter_typescript"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
exclude = ["argot/acceptance/catalog", "argot/research/signal/phase13/tier3_fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["argot/tests"]
