[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argot-engine"
version = "0.2.32"
requires-python = ">=3.11"
dependencies = [
    "pygit2==1.19.2",
    "scikit-learn>=1.5.0",
    "tree-sitter==0.23.2",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-python==0.23.6",
    "numpy>=1.26.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
# UnixCoder semantic embeddings for the `argot-extract-features
# --with-embeddings` *research* CLI.  Adds ~500 MB of model weights at
# runtime; NOT required for the production scoring pipeline (which uses
# only the BPE tokenizer from `transformers`, no torch).  This extra
# exists for the benchmark / research harness; production users should
# never need to install it.
#     uv pip install -e engine[embeddings]   # editable
#     pip install argot-engine[embeddings]   # from PyPI
embeddings = ["torch>=2.0"]

[project.scripts]
argot-extract = "argot.extract:main"
argot-train = "argot.train:main"
argot-check = "argot.check:main"
argot-calibrate = "argot.scoring.calibration:main"
argot-extract-features = "argot.ml.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["argot"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff==0.7.0",
    "mypy==1.11.2",
    "pytest==8.3.3",
]

[tool.mypy]
strict = true
python_version = "3.13"
exclude = "acceptance/catalog|^scripts/"

[[tool.mypy.overrides]]
module = "pygit2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

# torch is an OPTIONAL dep under the `embeddings` extra.  Without it
# installed the import in argot/ml/embeddings.py is unresolvable at
# type-check time; ignore the missing stubs so mypy stays green when the
# extra is not installed.  At runtime, _require_torch() raises a helpful
# error if torch is genuinely missing.
[[tool.mypy.overrides]]
module = "torch"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
exclude = ["argot/acceptance/catalog", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["argot/tests"]
